# amsel

./: Cargo.toml
core/: Cargo.toml
core/src/: backend.rs  lib.rs  video.rs
src/: main.rs  player.rs
