[package]
name = "player_core"
version = "0.1.0"
edition = "2024"

[dependencies]
futures.workspace = true
tokio.workspace = true
chrono.workspace = true

reqwest = { version = "0.12.15", features = ["json"] }
youtube_dl = { version = "0.10.0", features = ["tokio"] }

serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"

iso8601-duration = { version = "0.2.0", features = [ "chrono" ] }

thiserror = "2"

rodio = { version = "0.20.1", features = ["symphonia", "symphonia-all"] }
stream-download = { version = "0.19.0", features = ["async-read", "process", "registry", "reqwest-middleware", "reqwest-native-tls", "reqwest-rustls"] }
